--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -565,33 +565,46 @@
     <div class="body-contain" style="width:1920px; height:780px; display:flex; margin:auto; position: relative;">
         <div class="body-left" style="width:660px; height:780px;">
             <div class="body-left-grid">
-                <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
-                    <div class="data-name" style="position:absolute; left:20px; top: 30px;">
+                <div class="grid-item"
+                    style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
+                    <div style="width: 100%; height: 100%; background-color: red;">
+
+                    </div>
+
+                    <div style="width: 100%; height: 100%; background-color: royalblue;">
+
+                    </div>
+
+                    <div style="width: 100%; height: 100%; background-color: tomato;">
+
+                    </div>
+
+                </div>
+
+                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                    <div style="width: 100%; height: 100%;">
+                        <div class="box">45%</div>
+                    </div>
+                    <div style="width: 100%; height: 100%;">
+                        <div class="data-name" style="position: relative; left: 10px; top:25px">Temp.</div>
+                        <div class="data-value" style="position: relative; left: 10px; top:25px">40 k</div>
+                    </div>
+                </div>
+
+                <div class="grid-item" style="width:300px; height:160px;">
+                    <div style="width: 100%; height: 100%">
 
                     </div>
                 </div>
 
                 <div class="grid-item" style="width:300px; height:160px;">
-                    <div class="data-name" style="position:relative; left:20px; top: 25px;">
-                        4K Level
-                    </div>
-
-                    <div class="data-value" style="position:relative; left:20px; top: 35px;">
-                        80 cm
-                    </div>
-
+                    <div class="data-name" style="position: relative; left: 25px; top:25px">4K Level</div>
+                    <div class="data-value" style="position: relative; left: 25px; top:25px">80 cm</div>
                 </div>
 
                 <div class="grid-item" style="width:300px; height:160px;">
-
-                </div>
-
-                <div class="grid-item" style="width:300px; height:160px;">
-
-                </div>
-
-                <div class="grid-item" style="width:300px; height:160px;">
-
+                    <div class="data-name" style="position: relative; left: 25px; top:25px">4K Level</div>
+                    <div class="data-value" style="position: relative; left: 25px; top:25px">80 cm</div>
                 </div>
 
                 <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 4/5;">
