--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -583,7 +583,23 @@
 
                 <div class="grid-item" style="display:flex; width:300px; height:160px;">
                     <div style="width: 100%; height: 100%;">
-                        <div class="box">45%</div>
+                        <div class="box" style="--b:rgba(0,180,170,1.0)">45%</div>
+                        <div class="data-name"
+                            style="position: relative; top: 20px; width: 150px; height: 30px; text-align: center;">LN2
+                        </div>
+                    </div>
+                    <div style="width: 100%; height: 100%;">
+                        <div class="box" style="--b:rgba(0,190,250,1.0)">45%</div>
+                        <div class="data-name"
+                            style="position: relative; top: 20px; width: 150px; height: 30px; text-align: center;">LHe
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                    <div style="width: 100%; height: 100%;">
+                        <div class="data-name" style="position: relative; left: 10px; top:25px">Temp.</div>
+                        <div class="data-value" style="position: relative; left: 10px; top:25px">40 k</div>
                     </div>
                     <div style="width: 100%; height: 100%;">
                         <div class="data-name" style="position: relative; left: 10px; top:25px">Temp.</div>
@@ -591,20 +607,42 @@
                     </div>
                 </div>
 
-                <div class="grid-item" style="width:300px; height:160px;">
-                    <div style="width: 100%; height: 100%">
-
+                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                    <div style="width:70%; height:100%">
+                        <div class="data-name" style="position: relative; left: 25px; top:25px">2K Level</div>
+                        <div class="data-value" style="position: relative; left: 25px; top:40px">80 cm</div>
+                    </div>
+                    <div style="width:30%; height:100%">
+                        <div class="level-bar">
+                            <div class="level" style="--i:2px; background-color: rgba(14, 200, 63, 1.0);"></div>
+                            <div class="level" style="--i:4px;background-color: rgba(140, 200, 63, 1.0);"></div>
+                            <div class="level" style="--i:6px; background-color: rgba(252, 238, 33, 1.0);"></div>
+                            <div class="level" style="--i:8px; background-color: rgba(251, 186, 59, 1.0);"></div>
+                            <div class="level" style="--i:10px; background-color: rgba(247, 167, 40, 1.0);"></div>
+                            <div class="level" style="--i:12px; background-color: rgba(247, 147, 30, 1.0);"></div>
+                            <div class="level" style="--i:14px; background-color: rgba(241, 90, 36, 1.0);"></div>
+                            <div class="level" style="--i:16px; background-color: rgba(237, 28, 36, 1.0);"></div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="grid-item" style="width:300px; height:160px;">
-                    <div class="data-name" style="position: relative; left: 25px; top:25px">4K Level</div>
-                    <div class="data-value" style="position: relative; left: 25px; top:25px">80 cm</div>
-                </div>
-
-                <div class="grid-item" style="width:300px; height:160px;">
-                    <div class="data-name" style="position: relative; left: 25px; top:25px">4K Level</div>
-                    <div class="data-value" style="position: relative; left: 25px; top:25px">80 cm</div>
+                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                    <div style="width:70%; height:100%">
+                        <div class="data-name" style="position: relative; left: 25px; top:25px">4K Level</div>
+                        <div class="data-value" style="position: relative; left: 25px; top:40px">120 cm</div>
+                    </div>
+                    <div style="width:30%; height:100%">
+                        <div class="level-bar">
+                            <div class="level" style="--i:2px; background-color: rgba(0, 200, 63, 0.0);"></div>
+                            <div class="level" style="--i:4px;background-color: rgba(140, 200, 63, 0.0);"></div>
+                            <div class="level" style="--i:6px; background-color: rgba(252, 238, 33, 0.0);"></div>
+                            <div class="level" style="--i:8px; background-color: rgba(251, 186, 59, 1.0);"></div>
+                            <div class="level" style="--i:10px; background-color: rgba(247, 167, 40, 1.0);"></div>
+                            <div class="level" style="--i:12px; background-color: rgba(247, 147, 30, 1.0);"></div>
+                            <div class="level" style="--i:14px; background-color: rgba(241, 90, 36, 1.0);"></div>
+                            <div class="level" style="--i:16px; background-color: rgba(237, 28, 36, 1.0);"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 4/5;">
